# mini-pgw

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  README.md
config/: client_config.json  server_config.json
include/pgw/: blacklist.hpp  cdr_writer.hpp  config.hpp  http_api.hpp  in_memory_session_store.hpp  session.hpp  session_manager.hpp  session_store.hpp  sqlite_session_store.hpp  udp_server.hpp
src/client/: CMakeLists.txt  CTestTestfile.cmake  client.cpp  client.h  main.cpp  pgw_client
src/server/: CMakeLists.txt  CTestTestfile.cmake  blacklist.cpp  cdr_writer.cpp  config.cpp  http_api.cpp  in_memory_session_store.cpp  main.cpp  pgw_server  session_manager.cpp  sqlite_session_store.cpp  test_config.cpp  udp_server.cpp
tests/: 123123test_udp_server.cpp  CMakeLists.txt  CTestTestfile.cmake  http_api.cpp  mini_pgw_tests  mini_pgw_tests[1]_include.cmake  mini_pgw_tests[1]_tests.cmake  test_blacklist.cpp  test_in_memory_session_store.cpp  test_session_manager.cpp  test_sqlite_session_store.cpp
